--- a/scipy/optimize/meson.build
+++ b/scipy/optimize/meson.build
@@ -116,10 +116,10 @@ _lbfgsb = py3.extension_module('_lbfgsb',
   subdir: 'scipy/optimize'
 )
 
-moduleTNC = py3.extension_module('moduleTNC',
-  ['tnc/tnc.h', 'tnc/moduleTNC.c', 'tnc/tnc.c'],
+moduleTNC = py3.extension_module('_moduleTNC',
+  ['tnc/tnc.h', 'tnc/_moduleTNC.pyx', 'tnc/tnc.c'],
   c_args: numpy_nodepr_api,
-  include_directories: [inc_np, inc_f2py],
+  include_directories: [inc_np, inc_f2py, 'tnc'],
   dependencies: [py3_dep],
   install: true,
   subdir: 'scipy/optimize'
@@ -143,12 +143,12 @@ _cobyla = py3.extension_module('_cobyla',
 )
 
 minpack2_module = custom_target('minpack2_module',
-  output: ['minpack2module.c'],
+  output: ['_minpack2module.c'],
   input: 'minpack2/minpack2.pyf',
   command: [py3, generate_f2pymod, '@INPUT@', '-o', '@OUTDIR@']
 )
 
-minpack2 = py3.extension_module('minpack2',
+minpack2 = py3.extension_module('_minpack2',
   [minpack2_module, fortranobject_c, 'minpack2/dcsrch.f', 'minpack2/dcstep.f'],
   c_args: numpy_nodepr_api,
   fortran_args: fortran_ignore_warnings,
@@ -232,7 +232,7 @@ endif
 _dummy_init_optimize = custom_target('_dummy_init_optimize',
   output: '__init__.py',
   input: '__init__.py',
-  command: ['cp', '@INPUT@', '@OUTDIR@']
+  command: [copier, '@INPUT@', '@OUTDIR@']
 )
 
 _bglu_dense_c = custom_target('_bglu_dense_c',
@@ -272,46 +272,57 @@ py3.install_sources(
 )
 
 py3.install_sources([
-    '__init__.py',
-    '_basinhopping.py',
-    '_constraints.py',
-    '_differentiable_functions.py',
-    '_differentialevolution.py',
-    '_dual_annealing.py',
-    '_hessian_update_strategy.py',
-    '_linprog.py',
-    '_linprog_doc.py',
-    '_linprog_highs.py',
-    '_linprog_ip.py',
-    '_linprog_rs.py',
-    '_linprog_simplex.py',
-    '_linprog_util.py',
-    '_lsap.py',
-    '_minimize.py',
-    '_nnls.py',
-    '_numdiff.py',
-    '_qap.py',
-    '_remove_redundancy.py',
-    '_root.py',
-    '_root_scalar.py',
-    '_shgo.py',
-    '_spectral.py',
-    '_trustregion.py',
-    '_trustregion_dogleg.py',
-    '_trustregion_exact.py',
-    '_trustregion_krylov.py',
-    '_trustregion_ncg.py',
-    '_tstutils.py',
-    'cobyla.py',
-    'lbfgsb.py',
-    'linesearch.py',
-    'minpack.py',
-    'nonlin.py',
-    'optimize.py',
-    'slsqp.py',
-    'tnc.py',
-    'zeros.py'
-  ],
+  '__init__.py',
+  '_basinhopping.py',
+  '_cobyla_py.py',
+  '_constraints.py',
+  '_differentiable_functions.py',
+  '_differentialevolution.py',
+  '_dual_annealing.py',
+  '_hessian_update_strategy.py',
+  '_lbfgsb_py.py',
+  '_linesearch.py',
+  '_linprog.py',
+  '_linprog_doc.py',
+  '_linprog_highs.py',
+  '_linprog_ip.py',
+  '_linprog_rs.py',
+  '_linprog_simplex.py',
+  '_linprog_util.py',
+  '_lsap.py',
+  '_minimize.py',
+  '_minpack_py.py',
+  '_nnls.py',
+  '_nonlin.py',
+  '_numdiff.py',
+  '_optimize.py',
+  '_qap.py',
+  '_remove_redundancy.py',
+  '_root.py',
+  '_root_scalar.py',
+  '_shgo.py',
+  '_slsqp_py.py',
+  '_spectral.py',
+  '_tnc.py',
+  '_trustregion.py',
+  '_trustregion_dogleg.py',
+  '_trustregion_exact.py',
+  '_trustregion_krylov.py',
+  '_trustregion_ncg.py',
+  '_tstutils.py',
+  '_zeros_py.py',
+  'cobyla.py',
+  'lbfgsb.py',
+  'linesearch.py',
+  'minpack.py',
+  'minpack2.py',
+  'moduleTNC.py',
+  'nonlin.py',
+  'optimize.py',
+  'slsqp.py',
+  'tnc.py',
+  'zeros.py'
+],
   pure: false,
   subdir: 'scipy/optimize'
 )
