--- a/scipy/linalg/tests/meson.build
+++ b/scipy/linalg/tests/meson.build
@@ -2,9 +2,9 @@ python_sources = [
   '__init__.py',
   'test_basic.py',
   'test_blas.py',
-  'test_build.py',
   'test_cython_blas.py',
   'test_cython_lapack.py',
+  'test_cythonized_array_utils.py',
   'test_decomp.py',
   'test_decomp_cholesky.py',
   'test_decomp_cossin.py',
