--- a/scipy/sparse/linalg/meson.build
+++ b/scipy/sparse/linalg/meson.build
@@ -1,10 +1,15 @@
 py3.install_sources([
     '__init__.py',
     '_expm_multiply.py',
+    '_interface.py',
+    '_matfuncs.py',
     '_norm.py',
     '_onenormest.py',
     '_svdp.py',
+    'dsolve.py',
+    'eigen.py',
     'interface.py',
+    'isolve.py',
     'matfuncs.py'
   ],
   pure: false,
@@ -12,7 +17,7 @@ py3.install_sources([
 )
 
 subdir('_propack')
-subdir('isolve')
-subdir('dsolve')
-subdir('eigen')
+subdir('_isolve')
+subdir('_dsolve')
+subdir('_eigen')
 subdir('tests')
