--- a/scipy/sparse/meson.build
+++ b/scipy/sparse/meson.build
@@ -14,8 +14,23 @@ py3.extension_module('_csparsetools',
 
 python_sources = [
   '__init__.py',
+  '_arrays.py',
+  '_base.py',
+  '_bsr.py',
+  '_compressed.py',
+  '_construct.py',
+  '_coo.py',
+  '_csc.py',
+  '_csr.py',
+  '_data.py',
+  '_dia.py',
+  '_dok.py',
+  '_extract.py',
   '_index.py',
+  '_lil.py',
   '_matrix_io.py',
+  '_spfuncs.py',
+  '_sputils.py',
   'base.py',
   'bsr.py',
   'compressed.py',
