--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,7 +72,8 @@ stages:
             curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py && \
             python3.8 get-pip.py && \
             pip3 --version && \
-            pip3 install setuptools==59.4.0 wheel numpy==1.17.3 cython==0.29.18 pybind11 pytest pytest-timeout pytest-xdist pytest-env pytest-cov Pillow mpmath matplotlib==3.1.3 pythran==0.10.0 --user && \
+            pip3 install setuptools==59.4.0 wheel numpy==1.17.3 cython==0.29.18 pybind11 pytest pytest-timeout pytest-xdist pytest-env pytest-cov Pillow mpmath matplotlib==3.1.3 --user && \
+            pip install git+https://github.com/rgommers/pythran.git@debug-config && \
             apt-get -y install gcc-5 g++-5 gfortran-8 wget && \
             cd .. && \
             mkdir openblas && cd openblas && \
@@ -178,7 +179,6 @@ stages:
         numpy==1.21.4
         Pillow
         pybind11
-        pythran
         pytest
         pytest-cov
         pytest-env
@@ -186,6 +186,9 @@ stages:
         pytest-xdist==1.34.0
         threadpoolctl
       displayName: 'Install dependencies'
+    - script: >-
+        python -m pip install git+https://github.com/rgommers/pythran.git@debug-config
+      displayName: 'Install debug Pythran'
     # DLL resolution mechanics were changed in
     # Python 3.8: https://bugs.python.org/issue36085
     # While we normally leave adjustment of _distributor_init.py
