--- a/scipy/optimize/_highs/meson.build
+++ b/scipy/optimize/_highs/meson.build
@@ -197,6 +197,12 @@ else
   Wno_unused_but_set = []
 endif
 
+if host_machine.system() == 'linux'
+  highs_flags = ['-Wno-sign-compare', '-Wno-switch', '-Wno-format-truncation', '-Wno-non-virtual-dtor', '-Wno-class-memaccess']
+else
+  highs_flags = []
+endif
+
 _highs_wrapper = py3.extension_module('_highs_wrapper',
   ['cython/src/_highs_wrapper.pyx', highs_sources, ipx_sources],
   include_directories: [
@@ -219,6 +225,7 @@ _highs_wrapper = py3.extension_module('_highs_wrapper',
   dependencies: [py3_dep],
   cpp_args: [
     '-Wno-unused-variable',
+    highs_flags,
     Wno_unused_but_set,
     highs_define_macros,
     '-UOPENMP',
