--- a/mypy.ini
+++ b/mypy.ini
@@ -199,6 +199,9 @@ ignore_errors = True
 [mypy-scipy._build_utils.tempita]
 ignore_errors = True
 
+[mypy-scipy.signal._api]
+ignore_errors = True
+
 [mypy-scipy.signal.tests.test_signaltools]
 ignore_errors = True
 
