ENH: Add initial `uarray` support for `linalg`

--- a/scipy/linalg/tests/meson.build
+++ b/scipy/linalg/tests/meson.build
@@ -1,5 +1,7 @@
 python_sources = [
   '__init__.py',
+  'mock_backend.py',
+  'test_backend.py',
   'test_basic.py',
   'test_blas.py',
   'test_cython_blas.py',
