--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -61,30 +61,30 @@ jobs:
         restore-keys: |
           ${{ github.workflow }}-${{ matrix.python-version }}-ccache-macos-
 
+    - name: Setup Conda
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+        mamba-version: "*"
+        channels: conda-forge
+        channel-priority: true
+        activate-environment: scipy-dev
+        use-only-tar-bz2: true
+
     - name: Cache conda
       uses: actions/cache@v2
       env:
         # Increase this value to reset cache if environment.yml has not changed
         CACHE_NUMBER: 0
       with:
-        path: ~/conda_pkgs_dir
+        path: /Users/runner/miniconda3/envs/scipy-dev
         key:
           ${{ runner.os }}-conda-${{ env.CACHE_NUMBER }}-${{ hashFiles('environment.yml') }}
+        id: envcache
 
-    - uses: conda-incubator/setup-miniconda@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-        mamba-version: "*"
-        channels: conda-forge
-        channel-priority: true
-        environment-file: environment.yml
-        use-only-tar-bz2: true
-
-    - name: Setup Conda Environment
-      shell: bash -l {0}
-      run: |
-        mamba env create -f environment.yml
-        ccache -s
+    - name: Update Conda Environment
+      run: mamba env update -n my-env -f environment.yml
+      if: steps.envcache.outputs.cache-hit != 'true'
 
     - name: Build and Install Scipy
       shell: bash -l {0}
