BLD: avoid warnings for `fprintf` in f2py-generated C code
These happen for a Mingw-w64 based Windows build, where
`%zd` is problematic.

Warnings look like:

```
scipy/linalg/cython_lapack.cp39-win_amd64.pyd.p/cython_lapack.c:51637:13: warning: unknown conversion type character 'z' in format [-Wformat=]
51637 |             "%s.%s size changed, may indicate binary incompatibility. "
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
scipy/linalg/cython_lapack.cp39-win_amd64.pyd.p/cython_lapack.c:51638:24: note: format string is defined here
51638 |             "Expected %zd from C header, got %zd from PyObject",
      |                        ^
scipy/linalg/cython_lapack.cp39-win_amd64.pyd.p/cython_lapack.c:51637:13: warning: unknown conversion type character 'z' in format [-Wformat=]
51637 |             "%s.%s size changed, may indicate binary incompatibility. "
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
scipy/linalg/cython_lapack.cp39-win_amd64.pyd.p/cython_lapack.c:51638:47: note: format string is defined here
51638 |             "Expected %zd from C header, got %zd from PyObject",
      |                                               ^
scipy/linalg/cython_lapack.cp39-win_amd64.pyd.p/cython_lapack.c:51637:13: warning: too many arguments for format [-Wformat-extra-args]
51637 |             "%s.%s size changed, may indicate binary incompatibility. "
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

scipy/special/_ufuncs_cxx.cp39-win_amd64.pyd.p/_ufuncs_cxx.cpp:4283:24: warning: unknown conversion type character 'z' in format [-Wformat=]
 4283 |             "Expected %zd from C header, got %zd from PyObject",
      |                        ^
scipy/special/_ufuncs_cxx.cp39-win_amd64.pyd.p/_ufuncs_cxx.cpp:4283:47: warning: unknown conversion type character 'z' in format [-Wformat=]
 4283 |             "Expected %zd from C header, got %zd from PyObject",
      |            

--- a/scipy/meson.build
+++ b/scipy/meson.build
@@ -1,14 +1,17 @@
 # Platform detection
 is_windows = host_machine.system() == 'windows'
+is_mingw = is_windows and cc.get_id() == 'gcc'
 
 if is_windows
   # For mingw-w64, link statically against the UCRT.
   gcc_link_args = ['-lucrt', '-static']
-  if meson.get_compiler('c').get_id() == 'gcc'
+  if is_mingw
     add_global_link_arguments(gcc_link_args, language: ['c', 'cpp'])
     # Force gcc to float64 long doubles for compatibility with MSVC
     # builds, for C only.
     add_global_arguments('-mlong-double-64', language: 'c')
+    # Make fprintf("%zd") work (see https://github.com/rgommers/scipy/issues/118)
+    add_global_arguments('-D__USE_MINGW_ANSI_STDIO=1', language: ['c', 'cpp'])
     # Manual add of MS_WIN64 macro when not using MSVC.
     # https://bugs.python.org/issue28267
     bitness = run_command('_build_utils/gcc_build_bitness.py').stdout().strip()
